--- a/src/test/style.styl
+++ b/src/test/style.styl
@@ -1,1 +1,10 @@
-/* Hello styles */
+*
+  box-sizing border-box
+
+@keyframes fadeIn
+  to
+    opacity 1
+
+body
+  background #e74c3c
+  color #fff
