--- a/src/clock/dev.pug
+++ b/src/clock/dev.pug
@@ -1,7 +1,10 @@
-.clock
-  .clock-seconds
-    .clock-seconds__hand
-  .clock-minutes
-    .clock-minutes__hand
-  .clock-hours
-    .clock-hours__hand
+.watch
+  .watch__face
+    .watch-seconds
+      .watch-seconds__hand
+    .watch-minutes
+      .watch-minutes__hand
+    .watch-hours
+      .watch-hours__hand
+  .watch__strap
+  .watch__dial
