--- a/src/pokecode/dev.pug
+++ b/src/pokecode/dev.pug
@@ -1,6 +1,9 @@
-h1 Gotta catch it
-  .creature
-  .ball__wrapper
-    .ball
-      .ball__top
-      .ball__bottom
+.pen.animated
+  button
+    i.fa.fa-refresh
+  i.fa.fa-codepen.creature
+  .ball__wrapper.ball__wrapper--v
+    .ball__wrapper.ball__wrapper--h
+      .ball
+        .ball__top
+        .ball__bottom
