--- a/boilerplate/layout.boilerplate.pug
+++ b/boilerplate/layout.boilerplate.pug
@@ -1,5 +1,6 @@
 html
   head
+    link(href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css", rel="stylesheet", integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1", crossorigin="anonymous")
     link(rel='stylesheet', href='style.css')
   body
     block content
