--- a/src/profiler/dev.pug
+++ b/src/profiler/dev.pug
@@ -1,23 +1,5 @@
-section
-  header.main-header
-    h1.logo.header-chunk
-  header.profile-header.group
-    .profile-header-content
-      .profile-name
-        h1 username
-        .profile-username-area
-          span.profile-username @username
-  .links-and-stats
-    .profile-follow
-      a.follow-block
-        strong 99
-        span Followers
-      a.follow-block
-        strong 99
-        span Following
-    img.profile-avatar
-    .profile-links
-      a link 1
-      a link 2
-      a link 3
-      a.button.button-outline.mini-button Hire Me
+.content
+  section
+    h1.section__title Profile header
+    .section__content
+      include header.pug
