--- a/src/profiler/base.styl
+++ b/src/profiler/base.styl
@@ -69,6 +69,11 @@ h1,.h1 {
     font-size: 3.0rem
 }
 
+h3,.h3 {
+    font-size: 1.4rem;
+    font-weight: bold
+}
+
 @media (max-width: 550px) {
     h1,.h1 {
         font-size:2.2rem
