--- a/src/profiler/dev.pug
+++ b/src/profiler/dev.pug
@@ -1,5 +1,39 @@
 .content
   section
-    h1.section__title Profile header
+    h1.section__title Profile styling starter pack 😎
     .section__content
-      include header.pug
+      p Did you know that you can style your CodePen profile? You can!
+      p.
+        It's actually pretty simple. You can apply CSS from a pen to your profile page by providing a pen URL in the given option within "Settings > Customize"
+      p.
+        However, that's easier said than done. You'll need to explore the markup and find the styles you want to overwrite. This pen eases that burden and aims to get you started quickly by providing the classes and a visual preview for the main profile components.
+      p.
+        To get started, fork this pen, style and extend accordingly and then link the fork to your profile. That's it! Enjoy!
+  //- section
+  //-   h1.section__title Profile header
+  //-   .section__content
+  //-     include header.pug
+  //- section
+  //-   h1.section__title Location and bio
+  //-   .section__content
+  //-     include bio.pug
+  //- section
+  //-   h1.section__title Footer
+  //-   .section__content
+  //-     include footer.pug
+  //- section
+  //-   h1.section__title Buttons
+  //-   .section__content
+  //-     include button.pug
+  section
+    h1.section__title Nav
+    .section__content
+      include nav.pug
+  //- section
+  //-   h1.section__title Promo
+  //-   .section__content
+  //-     include promo.pug
+  //- section
+  //-   h1.section__title Pen
+  //-   .section__content
+  //-     include pen.pug
