--- a/src/profiler/style.styl
+++ b/src/profiler/style.styl
@@ -1,9 +1,11 @@
-@import 'theme.styl'
-@import 'base.styl'
 @import 'header.styl'
 @import 'button.styl'
-
-
+@import 'badge.styl'
+@import 'footer.styl'
+@import 'nav.styl'
+@import 'promo.styl'
+@import 'pen.styl'
+@import 'base.styl'
 
 .group:before,.group:after {
     content: "";
@@ -14,196 +16,27 @@
     clear: both
 }
 
-.badge {
-    font-family: "Lato", "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
-    font-size: 70%;
-    font-weight: 700;
-    text-transform: uppercase;
-    padding: 1px 3px 1px 3px;
-    color: black !important;
-    border-radius: 3px;
-    position: relative;
-    top: -2px;
-    text-shadow: none !important;
-    white-space: nowrap
+.width-wrapper
+  max-width 1200px
+  margin    0 auto
+  position  relative
+  padding   0 20px
+
+  @media(max-width 550px)
+    padding 0 10px
+
+
+.profile-location-and-bio {
+    text-align: center;
+    padding: 10px 0 20px 0
 }
 
-.single-pen .badge {
-    top: 0;
-    left: -3px;
-    font-size: 80%
+.profile-location {
+    color: #9A9A9C;
+    margin: 0 0 10px 0
 }
 
-.badge-pro {
-    background: #fcd000
-}
-
-.badge-hire {
-    background: #76daff
-}
-
-.badge-new,.badge-draft {
-    background: #47CF73
-}
-
-.badge-follows {
-    background: #555
-}
-
-
-
-.profile-header {
-    background: #444;
-    background-size: cover;
-    position: relative;
-    text-align: center
-}
-
-@media (max-width: 550px) {
-    .profile-header {
-        padding-top:15px;
-        padding-bottom: 25px
-    }
-}
-
-.profile-header-content {
-    position: relative;
-    padding: 110px 10px 75px 10px;
-    z-index: 2
-}
-
-@media (max-width: 550px) {
-    .profile-header-content {
-        padding:0
-    }
-}
-
-
-.links-and-stats {
-    position: relative;
-    background: black;
-    padding: 20px 10px
-}
-
-@media (max-width: 550px) {
-    .links-and-stats {
-        position:static;
-        padding: 15px 10px 10px 10px
-    }
-}
-
-.profile-links {
-    float: right
-}
-
-.profile-links>a:not(.button) {
-    margin-right: 10px;
-    color: #9A9A9C
-}
-
-.profile-links>a:not(.button):hover,.profile-links>a:not(.button):active {
-    color: white
-}
-
-@media (max-width: 550px) {
-    .profile-links {
-        float:none;
-        padding-top: 10px;
-        padding-bottom: 5px;
-        border-top: 3px solid #343436;
-        margin-top: 10px
-    }
-}
-
-.profile-follow {
-    display: inline-block
-}
-
-.follow-block {
-    margin-right: 10px;
-    color: #8A8A8A
-}
-
-.follow-block>strong {
-    color: white;
-    font-weight: normal
-}
-
-.follow-block .icon {
-    position: relative;
-    top: 3px
-}
-
-.profile-avatar {
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    -webkit-transform: translateX(-50%);
-    transform: translateX(-50%);
-    width: 124px;
-    height: 124px;
-    border: 5px solid #1E1E1E;
-    background: white
-}
-
-@media (max-width: 550px) {
-    .profile-avatar {
-        bottom:auto;
-        top: 75px;
-        left: 15px;
-        -webkit-transform: none;
-        transform: none;
-        width: 70px;
-        height: 70px
-    }
-}
-
-
-.edit-profile-link {
-    position: absolute;
-    top: 20px;
-    right: 20px
-}
-
-@media (max-width: 550px) {
-    .edit-profile-link {
-        display:none
-    }
-}
-
-.profile-name {
-    text-align: center
-}
-
-.profile-name h1 {
-    display: inline-block;
-    margin: 0 0 5px 0;
-    position: relative
-}
-
-@media (max-width: 550px) {
-    .profile-name {
-        text-align:left;
-        padding: 0 0 0 100px
-    }
-}
-
-.profile-username-area .badge {
-    position: relative;
-    top: 0;
-    margin-left: 5px
-}
-
-.profile-username {
-    color: #999
-}
-
-.profile-badges {
-    font-weight: bold;
-    margin: 0 0 0 10px;
-    font-size: 1.2rem;
-    position: absolute;
-    left: 100%;
-    top: 10px;
-    white-space: nowrap
+.profile-bio {
+    color: #F0F0F1;
+    font-size: 1.2rem
 }
