--- a/src/profiler/promo.styl
+++ b/src/profiler/promo.styl
@@ -1,24 +1,23 @@
-.promo-footer {
-    clear: both;
-    background: #28282B;
-    padding: 40px 0;
-    font-size: 0.9rem
-}
+/**
+  * Promo footer
+  *
+  * Basic styling for how to go PRO etc.
+*/
 
-.promo-footer p {
-    color: #959595
-}
+.promo-footer
+  clear      both
+  background #28282B
+  padding    40px 0
+  font-size  0.9rem
 
-@media (max-width: 550px) {
-    .promo-footer {
-        padding:20px 0
-    }
+  p
+    color #959595
 
-    .promo-footer .footer-chunk:not(:last-child) {
-        margin-bottom: 40px
-    }
+  @media (max-width 550px)
+    padding 20px 0
 
-    .promo-footer .width-wrapper {
-        padding: 0 20px
-    }
-}
+    .footer-chunk:not(:last-child)
+      margin-bottom 40px
+    
+    .width-wrapper
+      padding 0 20px
